# Paxos_Raft

./: README.md
Paxos/C++_Version/: CMakeLists.txt  Paxos.cpp
Paxos/C++_Version/src/: Acceptor.cpp  Acceptor.h  PaxosData.h  Proposer.cpp  Proposer.h
Paxos/Go_Version/: Acceptor.go  Paxos.go  Proposer.go
